<package format="2">
  <name>cmake_modules_customized</name>
  <version>0.0.1</version>
  <description>A common repository for CMake Modules used by ROS packages.</description>

  <maintainer email="yu.zhang.bit@gmail.com">Yu Zhang</maintainer>

  <license>Apache 2.0</license>

  <url type="repository">https://github.com/yuzhangbit/cmake_modules_customized.git</url>
  <url type="bugtracker">https://github.com/yuzhangbit/cmake_modules_customized/issues</url>

  <author email="yu.zhang.bit@gmail.com">Yu Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
